network-tools/nettools-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettools-optimize
spec:
  containers:
  - name: nettools
    image: nettools:optimize
    imagePullPolicy: Never
    command: ["sleep"]
    args: ["66666"]
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
