network-tools/ValidatingAdmissionPolicyBinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-nettools-debug-image-binding
spec:
  policyName: restrict-nettools-debug-image
  validationActions: ["Deny", "Audit"]
